--- a/KubePlayground/KubePlayground.csproj
+++ b/KubePlayground/KubePlayground.csproj
@@ -13,10 +13,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Cottle" Version="2.0.10" />
 		<PackageReference Include="dotenv.net" Version="3.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
 		<PackageReference Include="KubernetesClient" Version="12.1.1" />
+		<PackageReference Include="System.Reactive" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
