Improved cli command implementation

--- a/BackgroundProcesses/Properties/launchSettings.json
+++ b/BackgroundProcesses/Properties/launchSettings.json
@@ -1,7 +1,9 @@
 {
   "profiles": {
     "BackgroundProcesses": {
-      "commandName": "Project"
+      "commandName": "Project",
+      //"commandLineArgs": "feedercalculation --consumer-id 17 --mssql-connection \"datasource=hello-world;tree=1;merry-christmas\""
+      "commandLineArgs": "extracts --daily"
     },
     "Docker": {
       "commandName": "Docker"
